# LumenRTC

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Directory.Build.props  Directory.Build.targets  README.md  appveyor.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: abi-framework.yml  abi-guard.yml  pack-all.yml  pack-native.yml  pack.yml
abi/: CHANGELOG.md  GOVERNANCE.md  README.md  RFC_TEMPLATE.md  benchmark_budget.json  config.json
abi/baselines/: lumenrtc.json
abi/bindings/: lumenrtc.interop.json  lumenrtc.managed.json  lumenrtc.managed_api.json  lumenrtc.managed_api.source.json  lumenrtc.symbol_contract.json  lumenrtc.symbol_contract.sources.json
bridge/lumenrtc_bridge/: BUILD.gn  NOTICE  README.md  conanfile.py  helper.h
bridge/lumenrtc_bridge/include/: helper.h  lumenrtc_bridge.h  rtc_audio_device.h  rtc_audio_frame.h  rtc_audio_processing.h  rtc_audio_source.h  rtc_audio_track.h  rtc_data_channel.h  rtc_desktop_capturer.h  rtc_desktop_device.h  rtc_desktop_media_list.h  rtc_dtls_transport.h  rtc_dtmf_sender.h  rtc_frame_cryptor.h  rtc_ice_candidate.h  rtc_ice_transport.h  rtc_logging.h  rtc_media_stream.h  rtc_media_track.h  rtc_mediaconstraints.h  rtc_peerconnection.h  rtc_peerconnection_factory.h  rtc_rtp_capabilities.h  rtc_rtp_parameters.h  rtc_rtp_receiver.h  rtc_rtp_sender.h  rtc_rtp_transceiver.h  rtc_session_description.h  rtc_types.h  rtc_video_device.h  rtc_video_frame.h  rtc_video_renderer.h  rtc_video_source.h  rtc_video_track.h
bridge/lumenrtc_bridge/src/: helper.cc  lumenrtc_bridge.cc  rtc_audio_device_impl.cc  rtc_audio_device_impl.h  rtc_audio_processing_impl.cc  rtc_audio_processing_impl.h  rtc_audio_source_impl.cc  rtc_audio_source_impl.h  rtc_audio_track_impl.cc  rtc_audio_track_impl.h  rtc_data_channel_impl.cc  rtc_data_channel_impl.h  rtc_desktop_capturer_impl.cc  rtc_desktop_capturer_impl.h  rtc_desktop_device_impl.cc  rtc_desktop_device_impl.h  rtc_desktop_media_list_impl.cc  rtc_desktop_media_list_impl.h  rtc_dtls_transport_impl.cc  rtc_dtls_transport_impl.h  rtc_dtmf_sender_impl.cc  rtc_dtmf_sender_impl.h  rtc_frame_cryptor_impl.cc  rtc_frame_cryptor_impl.h  rtc_ice_candidate_impl.cc  rtc_ice_candidate_impl.h  rtc_logging.cc  rtc_media_stream_impl.cc  rtc_media_stream_impl.h  rtc_mediaconstraints_impl.cc  rtc_mediaconstraints_impl.h  rtc_peerconnection_factory_impl.cc  rtc_peerconnection_factory_impl.h  rtc_peerconnection_impl.cc  rtc_peerconnection_impl.h  rtc_rtp_capabilities_impl.cc  rtc_rtp_capabilities_impl.h  rtc_rtp_parameters_impl.cc  rtc_rtp_parameters_impl.h  rtc_rtp_receiver_impl.cc  (+17 more)
bridge/lumenrtc_bridge/test/: CMakeLists.txt
docs/: WEBRTC_UPSTREAM_SYNC.md
native/: CMakeLists.txt  lumenrtc.map
native/include/: lumenrtc.h
native/src/: lumenrtc.cpp  lumenrtc.exports.cpp  lumenrtc_impl.cpp  lumenrtc_impl.h  lumenrtc_impl_handles.generated.h  lumenrtc_layout_probe.c
samples/LumenRTC.Sample.LocalCamera/: Program.cs
samples/LumenRTC.Sample.LocalCamera.Convenience/: LumenRTC.Sample.LocalCamera.Convenience.csproj  Program.cs
samples/LumenRTC.Sample.LocalCamera.Core/: Program.cs
samples/LumenRTC.Sample.RemoteControl/: Program.cs
samples/LumenRTC.Sample.ScreenShare/: Program.cs
samples/LumenRTC.Sample.ScreenShare.Convenience/: Program.cs
samples/LumenRTC.Sample.ScreenShare.Core/: Program.cs
samples/LumenRTC.Sample.ScreenShareLoopback/: Program.cs
samples/LumenRTC.Sample.ScreenShareLoopback.Convenience/: Program.cs
samples/LumenRTC.Sample.ScreenShareLoopback.Core/: Program.cs
samples/LumenRTC.Sample.SignalingServer/: LumenRTC.Sample.SignalingServer.csproj  Program.cs
samples/LumenRTC.Sample.Streaming/: Program.cs
samples/LumenRTC.Sample.Streaming.Convenience/: Program.cs
samples/LumenRTC.Sample.Streaming.Core/: Program.cs
scripts/: abi.ps1  abi.sh  abi_guardrails.sh  bootstrap.ps1  bootstrap.sh  pack-all.ps1  pack-all.sh  pack.ps1  pack.sh  release-local.ps1  run-loopback-demo.cmd  run-loopback-demo.ps1  run-streaming-child.ps1  run-streaming-demo.cmd  run-streaming-demo.ps1  setup.cmd  setup.ps1  setup.sh
scripts/patches/: libwebrtc_ice_candidate_status.patch
src/LumenRTC/: GlobalUsings.cs  LumenRTC.cs  LumenRTC.csproj
src/LumenRTC.Rendering.Sdl/: LumenRTC.Rendering.Sdl.csproj  SdlContext.cs  SdlNative.cs  SdlVideoRenderer.cs  Utf8String.cs
src/LumenRTC/Callbacks/: AudioSinkCallbacks.cs  DataChannelCallbacks.cs  DtmfSenderCallbacks.cs  PeerConnectionCallbacks.cs  VideoSinkCallbacks.cs
src/LumenRTC/Config/: AudioOptions.cs  BundlePolicy.cs  CandidateNetworkPolicy.cs  IceServer.cs  IceTransportsType.cs  MediaConstraints.cs  MediaSecurityType.cs  RtcConfiguration.cs  RtcConfigurationExtensions.cs  RtcpMuxPolicy.cs  SdpSemantics.cs  TcpCandidatePolicy.cs
src/LumenRTC/Core/: ConvenienceApi.cs  CoreApi.cs  CoreRtcOptions.cs  CoreRtcSession.cs  LogSeverity.cs  LumenRtc.cs  RtcContext.cs  RtcContextOptions.cs  RtcLogging.cs
src/LumenRTC/Devices/: AudioDevice.cs  DesktopCapturer.cs  DesktopDevice.cs  DesktopMediaList.cs  MediaSource.cs  PeerConnectionFactory.cs  PeerConnectionFactoryExtensions.cs  VideoCapturer.cs  VideoDevice.cs
src/LumenRTC/Internal/: LumenRtcJsonContext.cs  NativeString.cs  Utf8String.cs  (+6 more)
tests/abi/: test_lumenrtc_data_channel_surface.py  test_lumenrtc_dtmf_surface.py  test_lumenrtc_function_coverage.py  test_lumenrtc_interop_metadata.py  test_lumenrtc_managed_api_metadata.py  test_lumenrtc_managed_metadata.py  test_lumenrtc_media_track_lifecycle_surface.py  test_lumenrtc_peer_connection_async_surface.py  test_lumenrtc_rtp_orchestration_surface.py  test_lumenrtc_stats_surface.py
tools/abi_guard/: README.md  abi_guard.py
tools/lumenrtc_codegen/: README.md  lumenrtc_managed_api_codegen.py  lumenrtc_managed_api_metadata_codegen.py  lumenrtc_native_exports.py  plugin.manifest.json
tools/lumenrtc_roslyn_codegen/: AbiInteropSourceEmitter.cs  AbiInteropTypesSourceEmitter.cs  AnalyzerReleases.Unshipped.md  LumenRTC.Abi.RoslynGenerator.csproj  LumenRtcAbiInteropGenerator.cs  ManagedApiSourceEmitter.cs  Program.cs  README.md
(+107 files in other folders)
