cmake_minimum_required(VERSION 3.20)
project(lumenrtc LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT LUMENRTC_BRIDGE_ROOT)
  if(DEFINED ENV{LUMENRTC_BRIDGE_ROOT})
    set(LUMENRTC_BRIDGE_ROOT $ENV{LUMENRTC_BRIDGE_ROOT})
  elseif(EXISTS "${CMAKE_SOURCE_DIR}/../bridge/lumenrtc_bridge/include")
    set(LUMENRTC_BRIDGE_ROOT "${CMAKE_SOURCE_DIR}/../bridge/lumenrtc_bridge")
  elseif(EXISTS "${CMAKE_SOURCE_DIR}/../../bridge/lumenrtc_bridge/include")
    set(LUMENRTC_BRIDGE_ROOT "${CMAKE_SOURCE_DIR}/../../bridge/lumenrtc_bridge")
  endif()
endif()

if(NOT LUMENRTC_BRIDGE_ROOT)
  message(FATAL_ERROR "Set LUMENRTC_BRIDGE_ROOT to the lumenrtc_bridge repo path")
endif()

if(NOT LUMENRTC_BRIDGE_BUILD_DIR)
  if(DEFINED ENV{LUMENRTC_BRIDGE_BUILD_DIR})
    set(LUMENRTC_BRIDGE_BUILD_DIR $ENV{LUMENRTC_BRIDGE_BUILD_DIR})
  endif()
endif()

if(NOT LUMENRTC_BRIDGE_BUILD_DIR)
  message(FATAL_ERROR "Set LUMENRTC_BRIDGE_BUILD_DIR to the directory containing lumenrtc_bridge")
endif()

set(LUMENRTC_BRIDGE_INCLUDE_DIR "${LUMENRTC_BRIDGE_ROOT}/include")

add_library(lumenrtc SHARED
  src/lumenrtc_impl.cpp
  src/lumenrtc.exports.cpp
)

if(NOT WIN32)
  set_target_properties(lumenrtc PROPERTIES
    C_VISIBILITY_PRESET hidden
    CXX_VISIBILITY_PRESET hidden
    VISIBILITY_INLINES_HIDDEN YES
  )
endif()

include(CheckIPOSupported)
check_ipo_supported(RESULT _ipo_supported OUTPUT _ipo_error)
if(_ipo_supported)
  set_target_properties(lumenrtc PROPERTIES INTERPROCEDURAL_OPTIMIZATION_RELEASE YES)
else()
  message(STATUS "IPO/LTO not enabled for lumenrtc: ${_ipo_error}")
endif()

target_include_directories(lumenrtc PUBLIC
  include
  "${LUMENRTC_BRIDGE_INCLUDE_DIR}"
)

target_compile_definitions(lumenrtc PRIVATE LUMENRTC_EXPORTS RTC_DESKTOP_DEVICE)

if(WIN32)
  target_compile_definitions(lumenrtc PRIVATE LUMENRTC_BRIDGE_API_DLL)
endif()

if(WIN32)
  set(_lumenrtc_bridge_import "${LUMENRTC_BRIDGE_BUILD_DIR}/lumenrtc_bridge.dll.lib")
  set(_lumenrtc_bridge_fallback "${LUMENRTC_BRIDGE_BUILD_DIR}/lumenrtc_bridge.lib")
  if(EXISTS "${_lumenrtc_bridge_import}")
    target_link_libraries(lumenrtc PRIVATE "${_lumenrtc_bridge_import}")
  elseif(EXISTS "${_lumenrtc_bridge_fallback}")
    target_link_libraries(lumenrtc PRIVATE "${_lumenrtc_bridge_fallback}")
  else()
    message(FATAL_ERROR "lumenrtc_bridge import library not found in ${LUMENRTC_BRIDGE_BUILD_DIR}. Expected lumenrtc_bridge.dll.lib or lumenrtc_bridge.lib.")
  endif()
else()
  add_library(lumenrtc_bridge SHARED IMPORTED)
  set_target_properties(lumenrtc_bridge PROPERTIES
    IMPORTED_LOCATION "${LUMENRTC_BRIDGE_BUILD_DIR}/lumenrtc_bridge.so"
  )
  target_link_libraries(lumenrtc PRIVATE lumenrtc_bridge)
endif()

if(UNIX AND NOT APPLE)
  target_link_options(lumenrtc PRIVATE
    "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/lumenrtc.map"
  )
  set_target_properties(lumenrtc PROPERTIES
    BUILD_RPATH "${LUMENRTC_BRIDGE_BUILD_DIR}"
    INSTALL_RPATH "${LUMENRTC_BRIDGE_BUILD_DIR}"
  )
endif()

# Layout probe — compile-time ABI struct layout verification.
# Generated by: abi_framework codegen (abi_framework.layout_probe plugin).
# If this target fails to compile, a struct field was renamed or removed
# in the C header without updating the IDL baseline — run:
#   abi_framework gen --skip-binary && abi_framework generate-baseline
add_library(lumenrtc_layout_probe STATIC
  src/lumenrtc_layout_probe.c
)
set_target_properties(lumenrtc_layout_probe PROPERTIES
  C_STANDARD 11
  LINKER_LANGUAGE C
)
target_include_directories(lumenrtc_layout_probe PRIVATE
  include
  "${LUMENRTC_BRIDGE_INCLUDE_DIR}"
)
# Make the main library depend on the probe so it always compiles together
add_dependencies(lumenrtc lumenrtc_layout_probe)
